--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 APP_PORT=8080
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ecommerce_db"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/workflowdb"
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
