--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - POSTGRES_USERNAME=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=ecommerce_db
+      - POSTGRES_DB=workflowdb
   redis_db:
     container_name: redis_db
     image: redis:latest
